Fix - [NoJIRA] - content-body spacing css (#711)

--- a/src/app-awwfood-site/styles/additional/components/_content-body.scss
+++ b/src/app-awwfood-site/styles/additional/components/_content-body.scss
@@ -26,7 +26,7 @@
         text-decoration: underline;
     }
 
-    p {
+    p, &__paragraph {
         @include content-body-component;
         padding-bottom: 0;
         margin: 0;
