--- a/src/app-cosmo-site/styles/additional/components/_content-body.scss
+++ b/src/app-cosmo-site/styles/additional/components/_content-body.scss
@@ -7,7 +7,7 @@
         color: $color-accent;
     }
 
-    p {
+    p, &__paragraph {
         margin-top: 10px;
     }
 
