--- a/src/app-foodnz-site/styles/additional/components/_content-body.scss
+++ b/src/app-foodnz-site/styles/additional/components/_content-body.scss
@@ -18,7 +18,7 @@
         text-decoration: underline;
     }
 
-    p {
+    p, &__paragraph {
         margin-top: $article-gap/4;
         margin-bottom: $article-gap/2;
     }
