--- a/src/app-hb-site/styles/additional/components/_content-body.scss
+++ b/src/app-hb-site/styles/additional/components/_content-body.scss
@@ -11,7 +11,7 @@
         color: $color-accent;
     }
 
-    p {
+    p, &__paragraph {
         margin-top: 10px;
     }
 
